# django-todo-app

./: pyproject.toml
todo/main/: models.py  urls.py  views.py
todo/main/migrations/: 0001_initial.py  0002_rename_state_item_done_item_created_item_due_and_more.py  0003_alter_item_created_alter_item_uuid.py  0004_alter_item_uuid.py  0005_alter_item_created_alter_item_uuid.py
todo/main/templates/main/: detail.html  index.html
todo/todo/: settings.py  urls.py
todo/todo/templates/: base.html
