[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Sina Niyavarzi <sinaniya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.2,<3.13.0"
django = ">=5.0.7,<5.1.0"
psycopg = ">=3.2.1,<3.3.0"
python-dotenv = ">=1.0.1,<1.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = ">=7.1.0,<7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
